examples/test/testpolicy11346.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11346
  namespace: namespace196
spec:
  podSelector:
    matchLabels:
      key47: value15
      key28: value42
      key22: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value38
      podSelector:
        matchLabels:
          key29: value17
          key44: value24
